Fix CSS on review branch for text alignment.

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -45,7 +45,3 @@ body {
 .extra-padding-bottom {
     padding-bottom: 250px;
 }
-
-.has-text-light  {
-    text-align: left;
-}
